################################################################################
##
##  YOUR QUILL
##
################################################################################

# set(TOOLBOX_API_DIR ${CMAKE_CURRENT_LIST_DIR})
set(TOOLBOX_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})

add_subdirectory(yq)
