################################################################################
##
##  YOUR QUILL
##
################################################################################

set(YQ_TOOLBOX_API ${CMAKE_CURRENT_LIST_DIR})
set(TOOLBOX_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})

add_subdirectory(yq)
