project(yqtoolbox2)

option(Feature_GLM "Add GLM Bindings" ON)

if(Feature_GLM)
    find_package(glm REQUIRED)
endif()

find_package(Log4cpp REQUIRED)
find_package(TBB REQUIRED)
find_package(CURL REQUIRED)
find_package(SQLite3 REQUIRED)

#   This is a testing file, excluded from GIT, used for quick test compilation 
#   of code before sliding it into the appropriate spot of the build.
#   (ie.  prototyping goes here, but do not commit/push test.cpp.)
if(EXISTS ${CMAKE_CURRENT_LIST_DIR}/test.cpp)
    set(core_test_source ./test.cpp)
endif()

#   Headers are being listed for anybody using an IDE (unnecessary for pure commandline)

add_library(${PROJECT_NAME} SHARED
    ${core_test_source}

    errors.hpp
    keywords.hpp
    strings.hpp
    strings.cpp
    units.hpp
    units.cpp

    basic/128-bit.hpp
    basic/Any.hpp
    basic/Any.cpp
    basic/AutoReset.hpp
    basic/BasicApp.hpp
    basic/BasicApp.cpp
    basic/BinaryBucket.hpp
    basic/ContentType.hpp
    basic/ContentType.cpp
    basic/Compare.hpp
    basic/Created.hpp
    basic/DelayInit.hpp
    basic/DelayInit.cpp
    basic/DiffEngine.hpp
    basic/Encode64.hpp
    basic/Encode64.cpp
    basic/Enum.hpp
    basic/Enum.cpp
    basic/ErrorDB.hpp
    basic/ErrorDB.cpp
    basic/Exception.hpp
    basic/Exception.hxx
    basic/Exception.cpp
    basic/Expect.hpp
    basic/Flag.hpp
    basic/Flag.cpp
    basic/Flags.hpp
    basic/Format.hpp
    basic/Format.cpp
    basic/FowlerNollVo.hpp
    basic/Future.hpp
    basic/Future.cpp
    basic/Global.hpp
    basic/Global.cpp
    basic/Guarded.hpp
    basic/IntRange.hpp
    basic/Http.hpp
    basic/HttpOp.hpp
    basic/HttpStatus.hpp
    basic/HttpStatus.cpp
    basic/HttpParser.hpp
    basic/HttpParser.cpp
    basic/Logging.hpp
    basic/Logging.cpp
    basic/MD5.hpp
    basic/MD5.cpp
    basic/MetaObject.hpp
    basic/MetaObject.cpp
    basic/MinMaxDef.hpp
    basic/Mutable.hpp
    basic/Object.hpp
    basic/Object.cpp
    basic/Random.hpp
    basic/Random.cpp
    basic/Ref.hpp
    basic/Ref.cpp
    basic/Result.hpp
    basic/Revision.hpp
    basic/Revision.cpp
    basic/Signal.hpp
    basic/SizeTimestamp.hpp
    basic/StringLiteral.hpp
    basic/ThreadId.hpp
    basic/ThreadId.cpp
    basic/UniqueID.hpp
    basic/UniqueID.cpp
    basic/Url.hpp
    basic/Url.cpp
    basic/VersionSpec.hpp
    basic/VersionSpec.cpp
    basic/XmlObject.hpp
    basic/XmlObject.cpp

    color/Colors.hpp
    color/HSL.hpp
    color/HSL.hxx
    color/HSL.cpp
    color/HSV.hpp
    color/HSV.hxx
    color/HSV.cpp
    color/RGB.cpp
    color/RGBA.cpp

    config/string.hpp
    
    container/Array.hpp
    container/ArrayX.hpp
    container/BasicBuffer.hpp
    container/BitArray.hpp
    container/ByteArray.hpp
    container/ByteArray.cpp
    container/Deque.hpp
    container/EnumMap.hpp
    container/Hash.hpp
    container/HashListImpl.hxx
    container/HashMapImpl.hxx
    container/HashVectorImpl.hxx
    container/List.hpp
    container/ListSetImpl.hxx
    container/ListVectorImpl.hxx
    container/Map.hpp
    container/MapListImpl.hxx
    container/MapVectorImpl.hxx
    container/MultiMap.hpp
    container/MultiMapVectorImpl.hxx
    container/Set.hpp
    container/SetVectorImpl.hxx
    container/Stack.hpp
    container/Vector.hpp
    
    container/initlist_utils.hpp
    container/map_utils.hpp
    container/reverse.hpp
    container/set_utils.hpp
    container/vector_utils.hpp
    container/container.cpp
    
    coord/Coord1.hpp
    coord/Coord1.hxx
    coord/Coord1.cpp
    coord/Coord2.hpp
    coord/Coord2.hxx
    coord/Coord2.cpp
    coord/Coord3.hpp
    coord/Coord3.hxx
    coord/Coord3.cpp
    coord/Coord4.hpp
    coord/Coord4.hxx
    coord/Coord4.cpp
    coord/Coord5.hpp
    coord/Coord5.hxx
    coord/Coord5.cpp
    coord/Coord6.hpp
    coord/Coord6.hxx
    coord/Coord6.cpp
    coord/forward.hpp
    
    io/AbstractFile.hpp
    io/AbstractFile.cpp
    io/Curl.hpp
    io/Curl.cpp
    io/DirUtils.hpp
    io/DirUtils.cpp
    io/Execute.hpp
    io/Execute.cpp
    io/FileResolver.hpp
    io/FileResolver.cpp
    io/FixedBuffer.hpp
    io/FileUtils.hpp
    io/FileUtils.cpp
    io/KeyValue.hpp
    io/KeyValue.cpp
    io/PluginLoader.hpp
    io/PluginLoader.cpp
    io/StdFile.hpp
    io/StdFile.cpp
    io/Stream.hpp
    io/Stream.cpp
    io/StreamOps.hpp
    io/StreamOps.cpp
    io/XmlFile.hpp
    io/XmlFile.cpp
    io/XmlUtils.hpp
    io/XmlUtils.cpp
    
    io/stream/Bytes.hpp
    io/stream/Bytes.cpp
    io/stream/File.hpp
    io/stream/File.cpp
    io/stream/First.hpp
    io/stream/First.cpp
    io/stream/LineCol.hpp
    io/stream/LineCol.cpp
    io/stream/OSFile.hpp
    io/stream/OSFile.cpp
    io/stream/QBytes.hpp
    io/stream/StdError.hpp
    io/stream/StdError.cpp
    io/stream/StdOutput.hpp
    io/stream/StdOutput.cpp
    io/stream/StdStream.hpp
    io/stream/StdStream.cpp
    io/stream/Text.hpp
    io/stream/Text.cpp

    macro/concat.hpp
    macro/cppstring.hpp
    macro/debugrel.hpp
    macro/make_version.hpp

    math/algorithm.hpp
    math/AllComponents.hpp
    math/AnyComponents.hpp
    math/Complex.hpp
    math/Complex.cpp
    math/Counter.hpp
    math/Counter.cpp
    math/Data1.hpp
    math/Data2.hpp
    math/Data3.hpp
    math/Data4.hpp
    math/Fraction.hpp
    math/Fraction.hxx
    math/Fraction.cpp
    math/gcd.hpp
    math/glm.hpp
    math/glm.cpp
    math/glm_types.hpp
    math/integer.hpp
    math/initialize.hpp
    math/initialize.cpp
    math/Pose2.hpp
    math/Pose2.hxx
    math/Pose2.cpp
    math/Pose3.hpp
    math/Pose3.hxx
    math/Pose3.cpp
    math/Range.hpp
    math/Range.hxx
    math/Range.cpp
    math/Side.hpp
    math/Sign.hpp
    math/SimpleSpace.hpp
    math/SimpleSpace.cpp
    math/UV.hpp
    math/UVW.hpp
    
    math/template/fraction.hpp
    math/template/gcd.hpp
    
    math/tolerance/Absolute.hpp
    math/tolerance/Relative.hpp
    
    
    meta/forward.hpp
    meta/AnyArgHelper.hpp
    meta/AnyArgHelper.cpp
    meta/AnyDef.hpp
    meta/AnyImpl.hpp
    meta/ArgInfo.hpp
    meta/ArgInfo.cpp
    meta/CompoundInfo.hpp
    meta/CompoundInfo.cpp
    meta/CompoundInfoDynamic.hpp
    meta/CompoundInfoStatic.hpp
    meta/ConstructorInfo.hpp
    meta/ConstructorInfo.cpp
    meta/ConstructorInfoImpl.hpp
    meta/ConstructorInfoWriter.hpp
    meta/DataBlock.hpp
    meta/DynamicPropGetter.hpp
    meta/DynamicPropSetter.hpp
    meta/Generator.hpp
    meta/Generator.cpp
    meta/GeneratorImpl.hpp
    meta/GlobalInfo.hpp
    meta/GlobalInfo.cpp
    meta/GlobalInfoWriter.hpp
    meta/InfoBinder.hpp
    meta/Init.hpp
    meta/Meta.hpp
    meta/Meta.cpp
    meta/MetaLookup.hpp
    meta/MetaRepo.hpp
    meta/MetaWriter.cpp
    meta/MethodInfo.hpp
    meta/MethodInfo.cpp
    meta/MethodInfoImpl.hpp
    meta/MethodInfoWriter.hpp
    meta/ObjectInfo.hpp
    meta/ObjectInfo.cpp
    meta/ObjectInfoWriter.hpp
    meta/OperatorInfo.hpp
    meta/OperatorInfo.cpp
    meta/OperatorInfoImpl.hpp
    meta/OperatorInfoWriter.hpp
    meta/PropertyInfo.hpp
    meta/PropertyInfo.cpp
    meta/PropertyInfoWriter.hpp
    meta/PropGetter.hpp
    meta/PropGetter.cpp
    meta/PropSetter.hpp
    meta/PropSetter.cpp
    meta/ReservedIDs.hpp
    meta/StaticPropGetter.hpp
    meta/StaticPropSetter.hpp
    meta/StdTypes.cpp
    meta/TypedArgInfo.hpp
    meta/TypeInfo.hpp
    meta/TypeInfo.cpp
    meta/TypeInfoWriter.hpp

    shape/AxBox1.cpp
    shape/AxBox1.hpp
    shape/AxBox1.hxx
    shape/AxBox2.cpp
    shape/AxBox2.hpp
    shape/AxBox2.hxx
    shape/AxBox3.cpp
    shape/AxBox3.hpp
    shape/AxBox3.hxx
    shape/AxBox4.cpp
    shape/AxBox4.hpp
    shape/AxBox4.hxx
    shape/AxCorners1.cpp
    shape/AxCorners1.hpp
    shape/AxCorners2.cpp
    shape/AxCorners2.hpp
    shape/AxCorners3.cpp
    shape/AxCorners3.hpp
    shape/AxCorners4.cpp
    shape/AxCorners4.hpp
    shape/Circle2.cpp
    shape/Circle2.hpp
    shape/Circle2.hxx
    shape/Circle3.cpp
    shape/Circle3.hpp
    shape/Circle3.hxx
    shape/Normal2.cpp
    shape/Normal2.hpp
    shape/Normal2.hxx
    shape/Normal3.cpp
    shape/Normal3.hpp
    shape/Normal3.hxx
    shape/Plane3.cpp
    shape/Plane3.hpp
    shape/Plane3.hxx
    shape/Polygon2.cpp
    shape/Polygon2.hpp
    shape/Polygon2.hxx
    shape/Polygon3.cpp
    shape/Polygon3.hpp
    shape/Polygon3.hxx
    shape/Polygon4.cpp
    shape/Polygon4.hpp
    shape/Polygon4.hxx
    shape/PolygonData.cpp
    shape/PolygonData.hpp
    shape/Polyline2.cpp
    shape/Polyline2.hpp
    shape/Polyline2.hxx
    shape/Polyline3.cpp
    shape/Polyline3.hpp
    shape/Polyline3.hxx
    shape/Polyline4.cpp
    shape/Polyline4.hpp
    shape/Polyline4.hxx
    shape/PolylineData.cpp
    shape/PolylineData.hpp
    shape/Quadrilateral2.cpp
    shape/Quadrilateral2.hpp
    shape/Quadrilateral2.hxx
    shape/QuadrilateralData.cpp
    shape/QuadrilateralData.hpp
    shape/Ray2.cpp
    shape/Ray2.hpp
    shape/Ray2.hxx
    shape/Ray3.cpp
    shape/Ray3.hpp
    shape/Ray3.hxx
    shape/Ray4.cpp
    shape/Ray4.hpp
    shape/Ray4.hxx
    shape/Rectangle2.cpp
    shape/Rectangle2.hpp
    shape/Rectangle2.hxx
    shape/Segment1.cpp
    shape/Segment1.hpp
    shape/Segment1.hxx
    shape/Segment2.cpp
    shape/Segment2.hpp
    shape/Segment2.hxx
    shape/Segment3.cpp
    shape/Segment3.hpp
    shape/Segment3.hxx
    shape/Segment4.cpp
    shape/Segment4.hpp
    shape/Segment4.hxx
    shape/SegmentData.cpp
    shape/SegmentData.hpp
    shape/shape_utils.cpp
    shape/shape_utils.hpp
    shape/Size1.cpp
    shape/Size1.hpp
    shape/Size1.hxx
    shape/Size2.cpp
    shape/Size2.hpp
    shape/Size2.hxx
    shape/Size3.cpp
    shape/Size3.hpp
    shape/Size3.hxx
    shape/Size4.cpp
    shape/Size4.hpp
    shape/Size4.hxx
    shape/Sphere3.cpp
    shape/Sphere3.hpp
    shape/Sphere3.hxx
    shape/Sphere4.cpp
    shape/Sphere4.hpp
    shape/Sphere4.hxx
    shape/Tetrahedron3.cpp
    shape/Tetrahedron3.hpp
    shape/Tetrahedron3.hxx
    shape/TetrahedronData.cpp
    shape/TetrahedronData.hpp
    shape/Triangle2.cpp
    shape/Triangle2.hpp
    shape/Triangle2.hxx
    shape/Triangle3.cpp
    shape/Triangle3.hpp
    shape/Triangle3.hxx
    shape/Triangle4.cpp
    shape/Triangle4.hpp
    shape/Triangle4.hxx
    shape/TriangleData.cpp
    shape/TriangleData.hpp
    
    sql/forward.hpp
    sql/QueryUrl.hpp
    sql/SqlError.hpp
    sql/SqlError.cpp
    sql/SqlLite.hpp
    sql/SqlLite.cpp
    sql/SqlLogging.hpp
    sql/SqlQuery.hpp
    sql/SqlQueryMap.hpp
    sql/SqlStatement.hpp
    sql/SqlStatement.cpp
    sql/SqlUtils.hpp
    sql/SqlUtils.cpp

    tensor/Tensor11.cpp
    tensor/Tensor11.hpp
    tensor/Tensor11.hxx
    tensor/Tensor12.cpp
    tensor/Tensor12.hpp
    tensor/Tensor12.hxx
    tensor/Tensor13.cpp
    tensor/Tensor13.hpp
    tensor/Tensor13.hxx
    tensor/Tensor14.cpp
    tensor/Tensor14.hpp
    tensor/Tensor14.hxx
    tensor/Tensor21.cpp
    tensor/Tensor21.hpp
    tensor/Tensor21.hxx
    tensor/Tensor22.cpp
    tensor/Tensor22.hpp
    tensor/Tensor22.hxx
    tensor/Tensor23.cpp
    tensor/Tensor23.hpp
    tensor/Tensor23.hxx
    tensor/Tensor24.cpp
    tensor/Tensor24.hpp
    tensor/Tensor24.hxx
    tensor/Tensor31.cpp
    tensor/Tensor31.hpp
    tensor/Tensor31.hxx
    tensor/Tensor32.cpp
    tensor/Tensor32.hpp
    tensor/Tensor32.hxx
    tensor/Tensor33.cpp
    tensor/Tensor33.hpp
    tensor/Tensor33.hxx
    tensor/Tensor34.cpp
    tensor/Tensor34.hpp
    tensor/Tensor34.hxx
    tensor/Tensor41.cpp
    tensor/Tensor41.hpp
    tensor/Tensor41.hxx
    tensor/Tensor42.cpp
    tensor/Tensor42.hpp
    tensor/Tensor42.hxx
    tensor/Tensor43.cpp
    tensor/Tensor43.hpp
    tensor/Tensor43.hxx
    tensor/Tensor44.cpp
    tensor/Tensor44.hpp
    tensor/Tensor44.hxx
        
    text/Comma.hpp
    text/IgCase.hpp
    text/IgCase.cpp
    text/Iter32.hpp
    text/IterUtf8.hpp
    text/IterUtf8.cpp
    text/IterW.hpp
    text/MaybeCase.hpp
    text/MaybeCase.cpp
    text/RevIgCase.hpp
    text/RevIgCase.cpp
    
    text/basic.hpp
    text/basic.cpp
    text/basic32.hpp
    text/basic32.cpp
    text/chars.hpp
    text/chars.cpp
    text/chars32.hpp
    text/chars32.cpp
    text/copy.hpp
    text/copy.cpp
    text/copy32.hpp
    text/copy32.cpp
    text/count.hpp
    text/count.cpp
    text/count32.hpp
    text/count32.cpp
    text/format.hpp
    text/format.cpp
    text/format32.hpp
    text/format32.cpp
    text/ios.hpp
    text/ios.cpp
    text/ios32.hpp
    text/ios32.cpp
    text/join.hpp
    text/join.cpp
    text/join32.hpp
    text/join32.cpp
    text/match.hpp
    text/match.cpp
    text/match32.hpp
    text/match32.cpp
    text/misc.hpp
    text/misc.cpp
    text/misc32.hpp
    text/misc32.cpp
    text/parse.hpp
    text/parse.cpp
    text/parse32.hpp
    text/parse32.cpp
    text/split.hpp
    text/split.cpp
    text/split32.hpp
    text/split32.cpp
    text/transform.hpp
    text/transform.cpp
    text/transform32.hpp
    text/transform32.cpp
    text/vsplit.hpp
    text/vsplit32.hpp

    trait/always_false.hpp
    trait/always_true.hpp
    trait/argument_type.hpp
    trait/can_add.hpp
    trait/can_affirm.hpp
    trait/can_divide.hpp
    trait/can_multiply.hpp
    trait/can_negate.hpp
    trait/can_subtract.hpp
    trait/can_two_add.hpp
    trait/can_two_divide.hpp
    trait/can_two_multiply.hpp
    trait/can_two_subtract.hpp
    trait/function_arguments.hpp
    trait/has_abs.hpp
    trait/has_addition.hpp
    trait/has_copysign.hpp
    trait/has_equality.hpp
    trait/has_half.hpp
    trait/has_identity.hpp
    trait/has_inequality.hpp
    trait/has_is_finite.hpp
    trait/has_less.hpp
    trait/has_nan.hpp
    trait/has_one.hpp
    trait/has_sqrt.hpp
    trait/has_subtraction.hpp
    trait/has_zero.hpp
    trait/ieee754.hpp
    trait/indices.hpp
    trait/integer.hpp
    trait/is_arithmetic.hpp
    trait/is_floating_point.hpp
    trait/is_integral.hpp
    trait/is_stdarray.hpp
    trait/is_stdspan.hpp
    trait/is_stdvector.hpp
    trait/is_template.hpp
    trait/not_copyable.hpp
    trait/not_moveable.hpp
    trait/numbers.hpp
    trait/return_type.hpp
    trait/sink.hpp
    trait/weak.hpp
    
    typedef/any.hpp
    typedef/axbox1.hpp
    typedef/axbox2.hpp
    typedef/axbox3.hpp
    typedef/axbox4.hpp
    typedef/bivector2.hpp
    typedef/bivector3.hpp
    typedef/bivector4.hpp
    typedef/circle2.hpp
    typedef/complex.hpp
    typedef/coord1.hpp
    typedef/coord2.hpp
    typedef/coord3.hpp
    typedef/coord4.hpp
    typedef/coord5.hpp
    typedef/coord6.hpp
    typedef/counter.hpp
    typedef/expected.hpp
    typedef/filesystem_path.hpp
    typedef/fraction.hpp
    typedef/hsl.hpp
    typedef/hsv.hpp
    typedef/int_range.hpp
    typedef/json.hpp
    typedef/multivector1.hpp
    typedef/multivector2.hpp
    typedef/multivector3.hpp
    typedef/multivector4.hpp
    typedef/normal2.hpp
    typedef/normal3.hpp
    typedef/plane3.hpp
    typedef/polygon2.hpp
    typedef/polygon3.hpp
    typedef/polygon4.hpp
    typedef/polyline2.hpp
    typedef/polyline3.hpp
    typedef/polyline4.hpp
    typedef/pose2.hpp
    typedef/pose3.hpp
    typedef/quadrilateral2.hpp
    typedef/quadvector4.hpp
    typedef/quaternion3.hpp
    typedef/range.hpp
    typedef/ray2.hpp
    typedef/ray3.hpp
    typedef/ray4.hpp
    typedef/rectangle2.hpp
    typedef/result.hpp
    typedef/rgb.hpp
    typedef/rgba.hpp
    typedef/result.hpp
    typedef/segment1.hpp
    typedef/segment2.hpp
    typedef/segment3.hpp
    typedef/segment4.hpp
    typedef/size1.hpp
    typedef/size2.hpp
    typedef/size3.hpp
    typedef/size4.hpp
    typedef/sphere3.hpp
    typedef/sphere4.hpp
    typedef/string.hpp
    typedef/string_initlists.hpp
    typedef/string_maps.hpp
    typedef/string_pairs.hpp
    typedef/string_sets.hpp
    typedef/string_vectors.hpp
    typedef/tensor11.hpp
    typedef/tensor12.hpp
    typedef/tensor13.hpp
    typedef/tensor14.hpp
    typedef/tensor21.hpp
    typedef/tensor22.hpp
    typedef/tensor23.hpp
    typedef/tensor24.hpp
    typedef/tensor31.hpp
    typedef/tensor32.hpp
    typedef/tensor33.hpp
    typedef/tensor34.hpp
    typedef/tensor41.hpp
    typedef/tensor42.hpp
    typedef/tensor43.hpp
    typedef/tensor44.hpp
    typedef/tetrahedron3.hpp
    typedef/triangle2.hpp
    typedef/triangle3.hpp
    typedef/triangle4.hpp
    typedef/trivector3.hpp
    typedef/trivector4.hpp
    typedef/url.hpp
    typedef/vector1.hpp
    typedef/vector2.hpp
    typedef/vector3.hpp
    typedef/vector4.hpp
    typedef/xml.hpp

    unit/declare.hpp
    unit/dims.hpp
    unit/Dimension.hpp
    unit/Dimension.cpp
    unit/literals.hpp
    unit/MKS.hpp
    unit/MKS.hxx
    unit/SCALED.hpp
    unit/SCALED.hxx
    
    userexpr/forward.hpp
    userexpr/Analysis.hpp
    userexpr/Context.hpp
    userexpr/RepoConfig.cpp
    userexpr/UserExpr.hpp
    userexpr/UserExpr.cpp

    userexpr/impl/Compiler.hpp
    userexpr/impl/Compiler.cpp
    userexpr/impl/Instruction.hpp
    userexpr/impl/Instruction.cpp
    userexpr/impl/OpData.hpp
    userexpr/impl/Repo.hpp
    userexpr/impl/Repo.cpp
    userexpr/impl/Streamline.hpp
    userexpr/impl/Streamline.cpp
    userexpr/impl/Symbol.hpp
    userexpr/impl/Symbol.cpp
    userexpr/impl/SymCategory.hpp
    userexpr/impl/SymData.hpp
    userexpr/impl/SymKind.hpp
    userexpr/impl/Token.hpp
    userexpr/impl/Token.cpp
    userexpr/impl/Tokenize.hpp
    userexpr/impl/Tokenize.cpp
    userexpr/impl/VirtualMachine.hpp
    userexpr/impl/VirtualMachine.cpp
    
    userexpr/opcode/AssignInstruction.hpp
    userexpr/opcode/AssignInstruction.cpp
    userexpr/opcode/ConstantInstruction.hpp
    userexpr/opcode/ConstantInstruction.cpp
    userexpr/opcode/DuplicateInstruction.hpp
    userexpr/opcode/DuplicateInstruction.cpp
    userexpr/opcode/FunctionInstruction.hpp
    userexpr/opcode/FunctionInstruction.cpp
    userexpr/opcode/NullInstruction.hpp
    userexpr/opcode/OperatorInstruction.hpp
    userexpr/opcode/OperatorInstruction.cpp
    userexpr/opcode/PopInstruction.hpp
    userexpr/opcode/PopInstruction.cpp
    userexpr/opcode/ValueInstruction.hpp
    userexpr/opcode/ValueInstruction.cpp
    userexpr/opcode/VariableInstruction.hpp
    userexpr/opcode/VariableInstruction.cpp

    vector/Bivector2.cpp
    vector/Bivector2.hpp
    vector/Bivector2.hxx
    vector/Bivector3.cpp
    vector/Bivector3.hpp
    vector/Bivector3.hxx
    vector/Bivector4.cpp
    vector/Bivector4.hpp
    vector/Bivector4.hxx
    vector/Multivector1.cpp
    vector/Multivector1.hpp
    vector/Multivector1.hxx
    vector/Multivector2.cpp
    vector/Multivector2.hpp
    vector/Multivector2.hxx
    vector/Multivector3.cpp
    vector/Multivector3.hpp
    vector/Multivector3.hxx
    vector/Multivector4.cpp
    vector/Multivector4.hpp
    vector/Multivector4.hxx
    vector/Quadvector4.cpp
    vector/Quadvector4.hpp
    vector/Quadvector4.hxx
    vector/Quaternion3.cpp
    vector/Quaternion3.hpp
    vector/Quaternion3.hxx
    vector/Trivector3.cpp
    vector/Trivector3.hpp
    vector/Trivector3.hxx
    vector/Trivector4.cpp
    vector/Trivector4.hpp
    vector/Trivector4.hxx
    vector/Vector1.cpp
    vector/Vector1.hpp
    vector/Vector1.hxx
    vector/Vector2.cpp
    vector/Vector2.hpp
    vector/Vector2.hxx
    vector/Vector3.cpp
    vector/Vector3.hpp
    vector/Vector3.hxx
    vector/Vector4.cpp
    vector/Vector4.hpp
    vector/Vector4.hxx
)

##########################
##  COMPILER DEFINITIONS

target_compile_definitions(${PROJECT_NAME}
    PRIVATE 
        YQ__CORE__OVERRIDE 
)

if(Feature_GLM)
    target_compile_definitions(${PROJECT_NAME}
        PUBLIC
            YQ_FEATURE_GLM=1
    )
endif()

##########################
##  INCLUDE DIRECTORIES

target_include_directories(${PROJECT_NAME} 
    PUBLIC 
        ${TOOLBOX_BIN_DIR}
        ${TOOLBOX_API_DIR}
        ${TBB_INCLUDE_DIR}
        ${LOG4CPP_INCLUDE_DIR}
        ${SQLite3_INCLUDE_DIRS}
)

if(Feature_GLM)
    target_include_directories(${PROJECT_NAME} INTERFACE
        ${glm_INCLUDE_DIR}
    )
endif()


##########################
##  OTHER LIBRARIES

target_link_libraries(${PROJECT_NAME} PUBLIC 
    ${LOG4CPP_LIBRARIES} 
    ${TBB_LIBRARIES}
    ${CURL_LIBRARIES}
    ${SQLite3_LIBRARY}

    json
    RapidXml
    tbbmalloc_proxy

     PRIVATE
        pstreams
)

IF(GCC)
    target_link_libraries(${PROJECT_NAME}
        PUBLIC
            stdc++fs
            stdc++exp
    )
ENDIF()

##########################
##  LINK TEST

LinkTest(${PROJECT_NAME})

